# auditablempc

./: Cargo.toml  Dockerfile  README.md
bench_logs/auction_logs/: params_1024_16_8_0.txt  params_1024_16_8_1.txt  params_1024_16_8_2.txt  params_1024_16_8_3.txt  params_1024_16_8_4.txt  params_1024_16_8_5.txt  params_1024_16_8_6.txt  params_1024_16_8_7.txt  params_1024_16_8_8.txt  params_1024_16_8_9.txt  params_1024_1_8_0.txt  params_1024_1_8_1.txt  params_1024_1_8_2.txt  params_1024_1_8_3.txt  params_1024_1_8_4.txt  params_1024_1_8_5.txt  params_1024_1_8_6.txt  params_1024_1_8_7.txt  params_1024_1_8_8.txt  params_1024_1_8_9.txt  params_1024_2_8_0.txt  params_1024_2_8_1.txt  params_1024_2_8_2.txt  params_1024_2_8_3.txt  params_1024_2_8_4.txt  params_1024_2_8_5.txt  params_1024_2_8_6.txt  params_1024_2_8_7.txt  params_1024_2_8_8.txt  params_1024_2_8_9.txt  params_1024_32_8_0.txt  params_1024_32_8_1.txt  params_1024_32_8_2.txt  params_1024_32_8_3.txt  params_1024_32_8_4.txt  params_1024_32_8_5.txt  params_1024_32_8_6.txt  params_1024_32_8_7.txt  params_1024_32_8_8.txt  params_1024_32_8_9.txt  (+427 more)
bench_logs/auction_logs/bench_run2nuz/: params_32_1_128_0.txt  params_32_1_128_1.txt  params_32_1_128_2.txt  params_32_1_128_3.txt  params_32_1_128_4.txt  params_32_1_128_5.txt  params_32_1_128_6.txt  params_32_1_128_7.txt  params_32_1_128_8.txt  params_32_1_128_9.txt  params_32_1_16_0.txt  params_32_1_16_1.txt  params_32_1_16_2.txt  params_32_1_16_3.txt  params_32_1_16_4.txt  params_32_1_16_5.txt  params_32_1_16_6.txt  params_32_1_16_7.txt  params_32_1_16_8.txt  params_32_1_16_9.txt  params_32_1_32_0.txt  params_32_1_32_1.txt  params_32_1_32_2.txt  params_32_1_32_3.txt  params_32_1_32_4.txt  params_32_1_32_5.txt  params_32_1_32_6.txt  params_32_1_32_7.txt  params_32_1_32_8.txt  params_32_1_32_9.txt  params_32_1_4_0.txt  params_32_1_4_1.txt  params_32_1_4_2.txt  params_32_1_4_3.txt  params_32_1_4_4.txt  params_32_1_4_5.txt  params_32_1_4_6.txt  params_32_1_4_7.txt  params_32_1_4_8.txt  params_32_1_4_9.txt  (+130 more)
bench_logs/bench_run_vee17tss/: params_32_16_1.txt  params_32_16_25.txt  params_32_32_1.txt
bench_logs/pec_expr_res/: params_1048576_16_8_0.txt
scripts/: auction.py  parse_auction.py  parse_random_circuits.py  parse_vee17.py  random_circuits.py  vee17.py
src/: data_structures.rs  error.rs  lib.rs  test.rs
src/ahp/: auditor.rs  constraint_systems.rs  indexer.rs  mod.rs  mpc_prover.rs
src/auction/: client.rs  mod.rs  server.rs
src/mpc/: interpolate.rs  mod.rs  mpc_polycommits.rs  preprocessing.rs
src/ped_commitments/: mod.rs  pec_polycommit.rs  pederson.rs
(+20 files in other folders)
