[package]
name = "marlin"
version = "0.1.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
]
description = "A library for the Marlin preprocessing zkSNARK"
repository = "https://github.com/scipr/marlin"
documentation = "https://docs.rs/marlin/"
keywords = ["cryptography", "polynomial commitments", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
algebra-core = { git = "https://github.com/sanket1729/zexe/", rev = "1c5f7894871375067e3291416e3cac7a49d31e23", default-features = false }
ff-fft = { git = "https://github.com/sanket1729/zexe/", rev = "1c5f7894871375067e3291416e3cac7a49d31e23", default-features = false }
bench-utils = { git = "https://github.com/sanket1729/zexe/", rev = "1c5f7894871375067e3291416e3cac7a49d31e23" }
r1cs-core = { git = "https://github.com/sanket1729/zexe/", rev = "1c5f7894871375067e3291416e3cac7a49d31e23", default-features = false }
r1cs-std = { git = "https://github.com/sanket1729/zexe/", rev = "1c5f7894871375067e3291416e3cac7a49d31e23", default-features = false }


poly-commit = { git = "https://github.com/sanket1729/poly_commit",rev = "cf0ac9468419a42e0584c2b803b9a16bc617ac8b", default-features = false }

rand_core = { version = "0.5" }
rand = "0.7.3"
rand_chacha = { version = "0.2.1", default-features = false }
rayon = { version = "1", optional = true }
digest = { version = "0.8" }
derivative = { version = "1", features = ["use_core"] }
algebra = { git = "https://github.com/sanket1729/zexe/", rev = "1c5f7894871375067e3291416e3cac7a49d31e23", default-features = false, features = ["bls12_381"] }

[dev-dependencies]
blake2 = { version = "0.8", default-features = false }


[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.test]
opt-level = 3
debug-assertions = true
incremental = true
debug = true

[features]
default = [ "std" ]
std = [ "algebra-core/std", "ff-fft/std", "r1cs-core/std", "poly-commit/std" ]
print-trace = [ "bench-utils/print-trace" ]
parallel = [ "std", "algebra-core/parallel", "ff-fft/parallel", "poly-commit/parallel", "rayon" ]
